--- a/samples/subsys/mgmt/osdp/peripheral_device/prj.conf
+++ b/samples/subsys/mgmt/osdp/peripheral_device/prj.conf
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2020 Siddharth Chandrasekaran <siddharth@embedjournal.com>
+# Copyright (c) 2020 Siddharth Chandrasekaran <sidcha.dev@gmail.com>
 #
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -11,5 +11,8 @@ CONFIG_GPIO=y
 # OSDP config
 CONFIG_OSDP=y
 CONFIG_OSDP_MODE_PD=y
+
+# Secure Channel
+CONFIG_ENTROPY_GENERATOR=y
 
 CONFIG_OSDP_LOG_LEVEL=4
