--- a/subsys/mgmt/osdp/Kconfig
+++ b/subsys/mgmt/osdp/Kconfig
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2020 Siddharth Chandrasekaran <siddharth@embedjournal.com>
+# Copyright (c) 2020 Siddharth Chandrasekaran <sidcha.dev@gmail.com>
 #
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -68,8 +68,18 @@ config OSDP_PACKET_TRACE
 	  Prints bytes sent/received over OSDP to console for debugging.
 	  LOG_HEXDUMP_DBG() is used to achieve this and can be very verbose.
 
+config OSDP_SKIP_MARK_BYTE
+	bool "Skip sending the initial marking byte (0xFF)"
+	help
+	  As per the OSDP specification, the first byte in the channel has
+	  to be a MARK byte which is 0xFF. Since this is not stated in the
+	  packet structure definition, some commercial CPs and PDs do not
+	  handle the initial mark byte correctly. This option can be used to
+	  completely disable sending/expecting a mark byte to work with
+	  such non-conforming devices.
+
 config OSDP_SC_ENABLED
-	bool "Enable OSDP Secure Channel"
+	bool "OSDP Secure Channel"
 	depends on CSPRING_ENABLED
 	default y
 	select CRYPTO
